Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103000

[Reg: 5.15->6.3.0] Q_EMIT does not wait for slots to return on FreeBSD

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 6.3.0
    • Core: Event loop
    • None
    • 1808df9ce5 (qt/qtbase/dev) 96392889f9 (qt/qtbase/6.3) 96392889f9 (qt/tqtc-qtbase/6.3) 1808df9ce5 (qt/tqtc-qtbase/dev) 5890e27e67 (qt/tqtc-qtbase/6.2)

    Description

      We have noticed some unexpected behaviour with Qt 6.3.0 on FreeBSD.

      A call to Q_EMIT does not seem to wait for connected slots to finish before returning to the calling function. This differs from what can be observed with Qt 5.15.2, where the slots are completely executed before Q_EMIT returns. Find attached a MWE of the given situation.

      On macOS, Windows, and Linux the tests behave the same with Qt 5.15.2 and Qt 6.3.0.

      Is this to be expected and the misassumption is on our end?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            janmoeller Jan Möller
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes